--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run Angular-Fresh:serve-ssr",
+    "serve:ssr": "node dist/Angular-Fresh/server/main.js",
+    "build:ssr": "ng build --prod && ng run Angular-Fresh:server:production",
+    "prerender": "ng run Angular-Fresh:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +23,11 @@
     "@angular/forms": "~9.0.6",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
+    "@angular/platform-server": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@nguniversal/express-engine": "^9.0.2",
     "bootstrap": "^4.5.2",
+    "express": "^4.15.2",
     "firebase": "^8.1.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
@@ -32,6 +39,8 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
